# touchstone

./: .dockerignore  .env.example  .gitignore  AUTOMATION.md  MASTER_ROADMAP.md  Makefile  PROJECT_STATUS.md  README.md  SECURITY_FINDINGS.md  docker-compose.yml  make.ps1  pyproject.toml
docs/: deployment-guide.md  (+2 more)
libs/touchstone-events/: pyproject.toml
libs/touchstone-events/src/touchstone_events/: __init__.py  dead_letter.py
libs/touchstone-events/tests/: test_dead_letter.py
libs/touchstone-fleet/: README.md  pyproject.toml
libs/touchstone-fleet/src/touchstone_fleet/: __init__.py  chaos.py  coordination.py  distribution.py  fleet.py  forecast.py  region.py  scheduler.py  slo.py  store.py
libs/touchstone-fleet/tests/: test_distribution.py  test_gameday.py  test_region.py  test_resilience_ops.py  test_scheduler.py  test_store.py
load-tests/: README.md  locustfile.py  pyproject.toml  run.sh
load-tests/touchstone_load/: api.py  config.py  metrics.py  users.py
sdks/python/: README.md  pyproject.toml
sdks/python/src/touchstone/: __init__.py  client.py  errors.py  inline.py  models.py
sdks/python/tests/: test_client_unit.py  test_inline.py  test_integration_e2e.py
services/control-plane/: Dockerfile  alembic.ini  openapi.json  pyproject.toml
services/control-plane/src/touchstone_control/: __init__.py  app.py  consumer_main.py  main.py
services/control-plane/src/touchstone_control/api/v1/: deps.py
services/control-plane/src/touchstone_control/api/v1/routers/: api_keys.py  audit.py  auth.py  health.py  internal_auth.py  projects.py  verifications.py  verifiers.py  workspaces.py
services/control-plane/src/touchstone_control/core/: __init__.py  config.py  errors.py  security.py
services/control-plane/src/touchstone_control/db/: audit_read.py  base.py
services/control-plane/src/touchstone_control/db/migrations/: env.py
services/control-plane/src/touchstone_control/db/migrations/versions/: e1169a838e3f_initial_schema.py
services/control-plane/src/touchstone_control/db/models/: __init__.py
services/control-plane/src/touchstone_control/domain/: __init__.py  rbac.py
services/control-plane/src/touchstone_control/middleware/: context.py  ratelimit.py  security.py
services/control-plane/src/touchstone_control/observability/: __init__.py  events.py  logging.py  robustness_consumer.py
services/control-plane/src/touchstone_control/schemas/: __init__.py
services/control-plane/tests/: __init__.py
services/control-plane/tests/integration/: __init__.py  test_api_flow.py  test_auth_flow.py  test_internal_auth.py  test_robustness_consumer.py  test_security_headers.py
services/control-plane/tests/unit/: __init__.py  test_rbac.py  test_security.py
services/ivp/: Dockerfile  README.md  pyproject.toml
services/ivp/src/touchstone_ivp/: __init__.py  auth.py  config.py  decision.py  distribution.py  enterprise.py  events.py  execution.py  gateway.py  introspect.py  main.py  plane.py  policy.py  resilience.py  schemas.py  streaming.py  telemetry.py
services/ivp/tests/: conftest.py
services/ivp/tests/integration/: test_distribution.py  test_enterprise.py  test_gateway.py
services/ivp/tests/unit/: test_decision.py  test_execution.py  test_policy.py  test_resilience.py  test_sandbox_selection.py
services/reward-hacking-detector/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/reward-hacking-detector/src/touchstone_rhd/: __init__.py  app.py  config.py  main.py  orchestrator.py  providers.py  publisher.py  worker.py  worker_main.py
services/reward-hacking-detector/src/touchstone_rhd/api/: auth.py  deps.py  introspect.py  routers.py  schemas.py
services/reward-hacking-detector/src/touchstone_rhd/attacks/: __init__.py  base.py  edgecase.py  generator.py  injection.py  model_attack.py  mutation.py
services/reward-hacking-detector/src/touchstone_rhd/db/migrations/: env.py
services/reward-hacking-detector/src/touchstone_rhd/detection/: __init__.py  detector.py
services/reward-hacking-detector/src/touchstone_rhd/domain/: models.py
services/reward-hacking-detector/src/touchstone_rhd/execution/: executor.py
services/reward-hacking-detector/src/touchstone_rhd/knowledge/: repository.py
services/reward-hacking-detector/src/touchstone_rhd/middleware/: metrics.py  security.py
services/reward-hacking-detector/src/touchstone_rhd/observability/: logging.py
services/reward-hacking-detector/src/touchstone_rhd/scoring/: robustness.py
services/reward-hacking-detector/tests/integration/: test_api.py  test_auth_federation.py  test_orchestrator.py  test_worker_kb.py
services/reward-hacking-detector/tests/unit/: test_attacks.py  test_detector.py  test_robustness.py  test_sandbox_wiring.py
services/risk-engine/: Dockerfile  pyproject.toml
services/risk-engine/src/touchstone_risk/: __init__.py  config.py  main.py  publisher.py  repository.py  scorer.py  worker.py
services/risk-engine/src/touchstone_risk/observability/: logging.py
services/risk-engine/tests/: __init__.py
services/risk-engine/tests/integration/: test_worker.py
services/risk-engine/tests/unit/: test_scorer.py
services/verification-engine/: Dockerfile  pyproject.toml
services/verification-engine/src/touchstone_verify/: __init__.py  artifact_store.py  config.py  main.py  publisher.py  repository.py  worker.py
services/verification-engine/src/touchstone_verify/engine/: base.py  code_verifier.py  ensemble.py  model_verifier.py  process_verifier.py  registry.py
services/verification-engine/src/touchstone_verify/observability/: logging.py
services/verification-engine/src/touchstone_verify/providers/: anthropic.py  base.py  mock.py
services/verification-engine/src/touchstone_verify/sandbox/: _harness.py  _pool_worker.py  base.py  oci.py  pool.py  runner.py
services/verification-engine/tests/: __init__.py
services/verification-engine/tests/integration/: test_worker_flow.py
services/verification-engine/tests/unit/: test_artifact_store.py  test_definition_limits.py  test_sandbox.py  test_sandbox_backends.py  test_verifiers.py  test_warm_pool.py
(+175 files in other folders)
