[project]
name = "touchstone-events"
version = "0.1.0"
description = "Frozen cross-service event contracts for the Touchstone platform."
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9,<3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/touchstone_events"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["UP042"]
