[project]
name = "touchstone-sdk"
version = "0.1.0"
description = "Official Python SDK for Touchstone — the AI Verification Layer."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/touchstone"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PT011", "PT018", "PT006", "I001", "E402"]
