[project]
name = "touchstone-control-plane"
version = "0.1.0"
description = "Touchstone Control Plane — tenancy, identity, verifier registry, verification orchestration."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "gunicorn>=23.0",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "aiokafka[lz4]>=0.12",  # lz4 extra: producer uses compression_type="lz4"
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "email-validator>=2.2",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
    "touchstone-events",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "testcontainers[postgres,redis]>=4.8",
    "coverage>=7.6",
    "pytest-cov>=5",  # Test step runs `pytest --cov`
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/touchstone_control"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "PT"]
# S101: asserts are fine in tests/DI bootstrap.
# S104: binding 0.0.0.0 is intentional inside containers.
# S105: "Bearer" token_type is a scheme name, not a secret.
ignore = ["S101", "S104", "S105", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "PT011"]  # test secrets + broad pytest.raises

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom legitimately calls these in defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "touchstone_control.api.v1.deps.require",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
