[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "touchstone-ivp"
version = "0.1.0"
description = "Touchstone Inline Verification Plane — live-traffic AI verification gateway."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "pyjwt>=2.8",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "touchstone-events",
    "touchstone-verification-engine",
    "touchstone-risk-engine",
    "touchstone-fleet",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.8", "anyio>=4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042", "BLE001"]
