[project]
name = "touchstone-reward-hacking-detector"
version = "0.1.0"
description = "Touchstone Reward-Hacking Detector — measures verifier robustness against manipulation."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "aiokafka[lz4]>=0.12",  # lz4 extra: producer uses compression_type="lz4"
    "structlog>=24.4",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "touchstone-events",
    "touchstone-verification-engine",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/touchstone_rhd"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "PT"]
ignore = ["S101", "UP042", "BLE001", "S311", "S105"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PT011", "PT018", "E501", "ASYNC109"]
