[project]
name = "touchstone-risk-engine"
version = "0.1.0"
description = "Touchstone Risk Engine — scores verification risk and emits risk.scored."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30",
    "aiokafka>=0.12",
    "structlog>=24.4",
    "touchstone-events",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/touchstone_risk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "PT"]
ignore = ["S101", "UP042", "BLE001"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PT011", "PT018", "E501"]
